Added an h1 and title element

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>My Porfolio</title>
   </head>
   <body>
+    <<h1>Welcome to My Porfolio</h1>
 
   </body>
 </html>
