--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>My Porfolio</title>
+    <title>My Porftolio</title>
   </head>
   <body>
-    <<h1>Welcome to My Porfolio</h1>
+    <<h1>Welcome to My Porftolio</h1>
 
   </body>
 </html>
