--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <<h1>Welcome to My Porftolio</h1>
+    <p> <img src = "img/me.jpeg" alt = "This image represents me"</p>
 
   </body>
 </html>
