Added two paragraphs to explain the purpose of the site

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -7,6 +7,7 @@
   <body>
     <<h1>Welcome to My Porftolio</h1>
     <p> <img src = "img/me.jpeg" alt = "This image represents me"</p>
-
+<p>This is to showcase what I have learnt so far</p>
+<p> In my quest to be a fully-baked frond-end developer</p>
   </body>
 </html>
