--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Porftolio</title>
+<link href="styles/styles.css" rel = "stylesheet type = "text/css"
   </head>
   <body>
     <<h1>Welcome to My Porftolio</h1>
