Added a stylistic element to change the h2 element

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p> <img src = "img/me.jpeg" alt = "This image represents me"</p>
 <p>This is to showcase what I have learnt so far</p>
 <p> In my quest to be a fully-baked frond-end developer</p>
-<h2> here are some interesting links to other projects</h2>
+<h2> Here are some interesting links to other projects</h2>
   </body>
 </html>
