Added an unordered list and a div element and additional styling

--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
   <body>
     <<h1>Welcome to My Porftolio</h1>
     <p> <img src = "img/me.jpeg" alt = "This image represents me"</p>
-<p>This is to showcase what I have learnt so far</p>
-<p> In my quest to be a fully-baked frond-end developer</p>
-<h2> Here are some interesting links to other projects</h2>
+    <p>This is to showcase what I have learnt so far</p>
+
+<h2> This is what I like to drink</h2>
+<div class = "drinks">
+<ul>
+  <li>Green Tea</li>
+  <li>Blueberry Bliss Tea</li>
+  <li>Cranberry Tea</li>
+</ul>
+</div>
+<h3>Green tea</h3>
+  <p>
+
+      <img src = "img/green.jpg" alt = "Green Tea">
+      Very refreshing, full of antioxidates
+  </p>
   </body>
 </html>
