Added additional paragraphs and the corresponding stylistic elements on css

--- a/index.html
+++ b/index.html
@@ -18,11 +18,28 @@
   <li>Cranberry Tea</li>
 </ul>
 </div>
-<h3>Green tea</h3>
+<h3>1: Green tea</h3>
   <p>
 
       <img src = "img/green.jpg" alt = "Green Tea">
-      Very refreshing, full of antioxidates
+      <br>
+      Very refreshing, full of antioxidants
+  </p>
+<br>
+  <h3>2: Blueberry Bliss</h3>
+    <p>
+
+        <img src = "img/blue.jpg" alt = "Blueberry Chai">
+        <br>
+        Will put you in a relaxed state
+    </p>
+<br>
+<h3>3: Cranberry Blast</h3>
+  <p>
+
+      <img src = "img/red.jpg" alt = "Cranberry Blast">
+      <br>
+      With hibiscus, this is chockful of Vitamin C
   </p>
   </body>
 </html>
