changed the h3 styling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <h3>2: Blueberry Bliss</h3>
     <p>
 
-        <img src = "img/blue.jpg" alt = "Blueberry Chai">
+        <img src = "img/lightblue.jpg" alt = "Blueberry Chai">
         <br>
         Will put you in a relaxed state
     </p>
