Added a folder with a project practiced in class

--- a/index.html
+++ b/index.html
@@ -10,36 +10,40 @@
     <p> <img src = "img/me.jpeg" alt = "This image represents me"</p>
     <p>This is to showcase what I have learnt so far</p>
 
-<h2> This is what I like to drink</h2>
-<div class = "drinks">
-<ul>
-  <li>Green Tea</li>
-  <li>Blueberry Bliss Tea</li>
-  <li>Cranberry Tea</li>
-</ul>
-</div>
-<h3>1: Green tea</h3>
-  <p>
+    <h2> This is what I like to drink</h2>
+    <div class = "drinks">
+      <ul>
+          <li>Green Tea</li>
+          <li>Blueberry Bliss Tea</li>
+          <li>Cranberry Tea</li>
+      </ul>
+    </div>
+    <h3>1: Green tea</h3>
+    <p>
 
       <img src = "img/green.jpg" alt = "Green Tea">
       <br>
       Very refreshing, full of antioxidants
-  </p>
-<br>
-  <h3>2: Blueberry Bliss</h3>
+    </p>
+    <br>
+    <h3>2: Blueberry Bliss</h3>
     <p>
 
         <img src = "img/lightblue.jpg" alt = "Blueberry Chai">
         <br>
         Will put you in a relaxed state
     </p>
-<br>
-<h3>3: Cranberry Blast</h3>
-  <p>
+    <br>
+    <h3>3: Cranberry Blast</h3>
+    <p>
 
       <img src = "img/red.jpg" alt = "Cranberry Blast">
       <br>
       With hibiscus, this is chockful of Vitamin C
-  </p>
+    </p>
+    <h2> Additional Projects </h2>
+    <div class = "projects">
+      <a href = "addditional-projects/correct-format.html">Correct Formating</a>
+    </div>
   </body>
 </html>
