Added an additional project about cats

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Porftolio</title>
-<link href="styles/styles.css" rel = "stylesheet type = "text/css"
+    <link href="styles/styles.css" rel = "stylesheet type = "text/css"
   </head>
   <body>
     <<h1>Welcome to My Porftolio</h1>
@@ -44,6 +44,8 @@
     <h2> Additional Projects </h2>
     <div class = "projects">
       <a href = "addditional-projects/correct-format.html">Correct Formating</a>
+      <br>
+      <a href = "addditional-projects/pets.html">My Pet Cat</a>
     </div>
   </body>
 </html>
