Added additional style elements to pad the images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h3>1: Green tea</h3>
     <p>
 
-      <img src = "img/green.jpg" alt = "Green Tea">
+      <img src = "img/green.jpg" alt = "Green Tea" class = "padded">
       <br>
       Very refreshing, full of antioxidants
     </p>
@@ -29,7 +29,7 @@
     <h3>2: Blueberry Bliss</h3>
     <p>
 
-        <img src = "img/lightblue.jpg" alt = "Blueberry Chai">
+        <img src = "img/lightblue.jpg" alt = "Blueberry Chai" class = "padded">
         <br>
         Will put you in a relaxed state
     </p>
@@ -37,7 +37,7 @@
     <h3>3: Cranberry Blast</h3>
     <p>
 
-      <img src = "img/red.jpg" alt = "Cranberry Blast">
+      <img src = "img/red.jpg" alt = "Cranberry Blast" class = "padded">
       <br>
       With hibiscus, this is chockful of Vitamin C
     </p>
