Re-styled the CSS and added functionality on the index html

--- a/addditional-projects/pets.html
+++ b/addditional-projects/pets.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Introducing Mr Whiskers</h1>
-    <p> <img src = "../img/Whiskers.jpg" alt = "This is Mr Whiskers"</p>
+    <p> <img src = "../img/Whiskers.jpg" alt = "This is Mr Whiskers" class = "padded" </p>
     <h2>About Mr Whiskers</h2>
     <div class = "Whiskers">
       <ul>
@@ -15,5 +15,14 @@
         <li>Sometimes he drives me up the wall</li>
       </ul>
     </div>
+    <h2> Living with Mr Whiskers</h2>
+    <p>
+      <ul>
+        <li>If he starts behaving differently, I look up on reddit</li>
+        <li>Sometimes he helps me with work-related items</li>
+       <p> <img src = "../img/cat_working.jpg" alt = "Cat helping me with homework" </p>
+       <li> Sometimes I order from <a href = "https://petstore.co.ke" </a>petfood stores to order for his food </li>
+      </ul>
+    </p>
   </body>
 </html>
